<resources>
    <string name="app_name">Business Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="content_description_start_icon">start icon</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_card_button">Add Card Button</string>
    <string name="card_requests">Card Requests</string>
    <string name="emptyString" />
    <string name="closeButton">Close</string>
    <string name="myBio">My Bio</string>
    <string name="add_location_button">Pin Business Location</string>
    <string name="proceed">Proceed</string>
    <string name="maps_image">Maps placeholder\n</string>
    <string name="departmental_contacts">Departments Contacts</string>
    <string name="add_button">Add Button\n</string>
    <string name="department_email">Department Email</string>
    <string name="department_description">Department Description</string>
    <string name="department_nane">Department Nane</string>
    <string name="add_department">Add Department</string>
    <string name="department_mobile">Department Mobile</string>
    <string name="department_whatsapp">Department WhatsApp</string>
    <string name="back_button">Back Button</string>
    <string name="save">Save</string>
    <string name="edit_department">Edit Department</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="approve_member">Approve Member</string>
    <string name="decline_member">Decline Member</string>
    <string name="remove_member">Remove Member</string>
    <string name="link">Link to Business</string>
    <string name="link_button">Link Button</string>
    <string name="image_button">Image Button</string>
    <string name="save_link">Save Link</string>
    <string name="team">Team</string>
    <string name="social_media">Social Media</string>
    <string name="business_details">Business Details</string>
    <string name="my_profile">My Profile</string>
    <string name="my_business_details">My Business Details</string>
    <string name="individuals">Individuals</string>
    <string name="businesses">Businesses</string>
    <string name="my_businesses">My Businesses</string>
    <string name="my_work_place">My Work Place</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="request_card">Request Card</string>
    <string name="add_business">Add Business</string>
    <string name="physical_address">Physical Address</string>
    <string name="department_contacts">Department Contacts</string>
    <string name="see_more">See More</string>
    <string name="call">Call</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="website">Website</string>
    <string name="share">Share</string>
    <string name="our_team">Our Team</string>
    <string name="edit">Edit</string>
    <string name="bio">Bio</string>
    <string name="image_view">Image View</string>
    <string name="reset">Reset</string>
    <string name="scan">Scan</string>
    <string name="galley">Galley</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="business">Business</string>
    <string name="individual">Individual</string>
    <string name="scan_code">Scan Code</string>
    <string name="my_card">My Card</string>
    <string name="search_button">Search Button</string>
    <string name="add_request_note">Add Request Note</string>
    <string name="send_request">Send with Note</string>
    <string name="skip">Skip</string>
    <string name="start_adding_business_cards">Start Adding Business Cards</string>
    <string name="no_businesses_message">All your saved cards for businesses will be displayed here. You will swipe right and left to see them.</string>
    <string name="no_individuals_message">All your shared cards for other individuals will be displayed here. You will swipe right and left to see them.</string>
    <string name="start_adding_individuals_cards">Start Adding Individuals Cards</string>
    <string name="make_member_admin">Make Admin</string>
    <string name="remove_member_admin">Remove as Admin</string>
    <string name="work_place">Work Place</string>
    <string name="default_web_client_id">155854465270-gb5lkcofmn5n99fucj21tchq3fp70i3c.apps.googleusercontent.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="please_type_your_email">Please type your email</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create account</string>
    <string name="welcome">Welcome</string>
    <string name="please_login">Please Login</string>
    <string name="or">OR</string>
    <string name="pride_technologies">PRIDE TECHNOLOGIES</string>
    <string name="from">FROM</string>
    <string name="card">Card</string>
    <string name="add_personal_details_title">Personal Details</string>
    <string name="personal_bio">Personal Bio</string>
    <string name="app_permissions">App Permissions</string>
    <string name="add_permissions_desc">This app requires some device permissions to work better. Please allow access to these permissions.</string>
    <string name="storage_permissions">Storage Permissions</string>
    <string name="camera_permissions">Camera Permissions</string>
    <string name="audio_permissions">Audio Permissions</string>
    <string name="phone_permissions">Phone Permissions</string>
    <string name="location_permissions">Location Permissions</string>
</resources>