<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".activities.AddDepartmentActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_32"
        android:contentDescription="@string/back_button"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="16dp"
        android:text="@string/add_department"
        android:textSize="24sp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departmentNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_24sdp"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/department_nane"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/content_description_start_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departmentDescTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:hint="@string/department_description"
            app:endIconMode="clear_text"
            style="@style/TextInputLayoutStyle"
            app:startIconContentDescription="@string/content_description_start_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minLines="5"
                android:maxLines="5"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departmentEmailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:hint="@string/department_email"
            style="@style/TextInputLayoutStyle"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/content_description_start_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departmentMobileTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:hint="@string/department_mobile"
            style="@style/TextInputLayoutStyle"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/content_description_start_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departmentWhatsAppTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:hint="@string/department_whatsapp"
            style="@style/TextInputLayoutStyle"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/content_description_start_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="24dp"
        style="@style/OutlineButton"
        android:backgroundTint="?attr/colorOnPrimary"
        android:textColor="?attr/colorPrimary"
        android:text="@string/proceed"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>