<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.BusinessCard.AppWidget.Container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:backgroundTint="@color/primaryColor"
    android:theme="@style/Theme.BusinessCard.AppWidgetContainer">

    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/appwidget_text"
        android:src="@drawable/qr_code_black" />

    <TextView
        android:id="@+id/textView240"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/scan_code"
        android:textColor="@color/darkPrimaryColor"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/scanLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@+id/galleyLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/openScanIndividualButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/scan"
                android:contentDescription="@string/image_button"
                app:tint="@color/darkPrimaryColor" />


            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_3sdp"
                android:text="@string/individual"
                android:textColor="@color/darkPrimaryColor"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scanBusinessLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/scanLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/openScanBusinessButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/scan"
                android:contentDescription="@string/image_button"
                app:tint="@color/darkPrimaryColor" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_3sdp"
                android:text="@string/business"
                android:textColor="@color/darkPrimaryColor"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>