<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/reset_password"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/please_type_your_email"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:startIconContentDescription="@string/content_description_start_icon"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button30"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="@dimen/_40sdp"
        style="@style/OutlineButton"
        android:text="Back"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button31"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="@dimen/_40sdp"
        style="@style/OutlineButton"
        android:backgroundTint="?attr/colorOnPrimary"
        android:text="@string/submit"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>