<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".AddSocialMediaActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:tint="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_32"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/linkTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:hint="Enter Link"
        style="@style/TextInputLayoutStyle"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:startIconContentDescription="@string/content_description_start_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:text="@string/save"
        android:textSize="17sp"
        style="@style/OutlineButton"
        android:textColor="?attr/colorPrimary"
        android:backgroundTint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>